cmake_minimum_required(VERSION 4.0)
project(Cpp)

set(CMAKE_CXX_STANDARD 98)

add_subdirectory(experiment_01)
add_subdirectory(experiment_02)
add_subdirectory(experiment_03)
add_subdirectory(experiment_04)
add_subdirectory(experiment_05)
add_subdirectory(experiment_06)
add_subdirectory(experiment_07)
add_subdirectory(experiment_08)
add_subdirectory(experiment_09)
add_subdirectory(experiment_10)
add_subdirectory(experiment_11)
add_subdirectory(experiment_13)

add_executable(ex.cpp)